--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <select data-native-menu="false" id="Theme" onChange="SetTheme(this.value);">
         <option selected="selected" value="green">Caspian</option>
         <option value="brown">Pyramid</option>
-        <option value="blue">Atlantic</option>
+        <option value="blue">River</option>
         <option value="oriental">Oriental</option>
       </select>
     </div>
@@ -120,7 +120,7 @@
     <div align="center">New Game</div>
     <div>
        <select data-native-menu="false" id="VariantChoice">
-          <option value="Persian" selected="selected">Persian Princess</option>
+          <option value="Persian">Persian Princess</option>
           <option value="Citadel">Celtic Citadel</option>
           <option value="ASE">Egyptian Eye</option>
           <option value="Oriental">Oriental Omega</option>
