--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>Play Persian Chess</title>
-<link rel="stylesheet" href="css/jquery.mobile-1.4.5.css" type="text/css" media="all" />
+<link rel="stylesheet" href="css/jquery.mobile-1.4.5.css1" type="text/css" media="all" />
 <link rel='stylesheet' href='css/persianchess.css' type='text/css' media='all' />
   <script src="js/lib/jquery-2.1.4.min.js"></script>
   <script src="js/lib/jquery.mobile-1.4.5.min.js"></script>
