--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 <head>
 <meta charset="UTF-8" />
 <title>Play Persian Chess</title>
-<link rel="stylesheet" href="css/jquery.mobile-1.4.5.css1" type="text/css" media="all" />
+<link rel="stylesheet" href="css/jquery.mobile-1.4.5.css" type="text/css" media="all" />
 <link rel='stylesheet' href='css/persianchess.css' type='text/css' media='all' />
   <script src="js/lib/jquery-2.1.4.min.js"></script>
   <script src="js/lib/jquery.mobile-1.4.5.min.js"></script>
+  <script src='js/lib/jquery.transit.js'></script>
   <script src="js/lib/jquery.cookie.js" type="text/javascript"></script>
   <script src="js/lib/audio5.js"></script>
   <script src="js/lib/spin.min.js"></script>
