--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div id="board" data-role="none"></div>
       </div>
       <div id="controls_container" class="ui-block-b">
-        <a href="#settings_panel" class="ui-btn ui-btn-inline ui-icon-bars ui-btn-icon-notext"></a>
-        <a href="#newgame_panel" class="ui-btn ui-btn-inline ui-icon-home ui-btn-icon-notext"></a>
+        <a href="#settings_panel" class="ui-btn ui-btn-inline ui-icon-bars ui-btn-icon-notext" onclick="PlaySound(audio_click);"></a>
+        <a href="#newgame_panel" class="ui-btn ui-btn-inline ui-icon-home ui-btn-icon-notext" onclick="PlaySound(audio_click);"></a>
         <a class="ui-btn ui-btn-inline ui-icon-arrow-l ui-btn-icon-notext" onclick="TakeBack();"></a>
         <a class="ui-btn ui-btn-inline ui-icon-arrow-r ui-btn-icon-notext" onclick="MoveForward();"></a>
         <a class="ui-btn ui-btn-inline ui-icon-recycle ui-btn-icon-notext" onclick="FlipBoard();"></a>
