--- a/index.html
+++ b/index.html
@@ -134,10 +134,35 @@
       <a data-role="button" data-icon="arrow-r" data-iconpos="right" data-theme="a" data-mini="true" onclick="StartNewGame(); return false" rel="external">Start</a>
     </div>
 
+    <br><hr>
+
+    <div align="center" class="courier_new_big">Save/Load game</div>
+    <div class="ui-grid-a">
+      <div class="ui-block-a">
+        <select data-native-menu="false" data-mini="true" id="SaveLoadChoice">
+          <option value="g1">Game 1</option>
+          <option value="g2">Game 2</option>
+          <option value="g3">Game 3</option>
+          <option value="g4">Game 4</option>
+          <option value="g4">Game 5</option>
+          <option value="g4">Game 6</option>
+          <option value="g4">Game 7</option>
+       </select>
+      </div>
+      <div class="ui-block-b">
+          <a class="ui-btn ui-btn-inline ui-icon-edit ui-btn-icon-notext" onclick="SaveGameToLS();"></a>
+          <a class="ui-btn ui-btn-inline ui-icon-action ui-btn-icon-notext" onclick="LoadGameFromLS();"></a>
+      </div>
+    </div>
+
+
   </div>
 
   <!-- Game over pupup -->
   <div data-role="popup" id="gameover_popup" class="ui-content" data-position-to="#console_container"></div>
+
+  <!-- Game save/load pupup -->
+  <div data-role="popup" id="gamesaveload_popup" class="ui-content" data-position-to="#console_container"></div>
 
 <script src="js/PersianChessBoard.js"></script>
 <script src="js/PersianChessPlatform.js"></script>
