--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <script src="js/lib/jquery.cookie.js" type="text/javascript"></script>
   <script src="js/lib/audio5.js"></script>
   <script src="js/lib/spin.min.js"></script>
-  <script src="phonegap.js"></script>
+  <script src="cordova.js"></script>
 </head>
 <body>
 
