--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <link rel='stylesheet' href='css/persianchess.css' type='text/css' media='all' />
   <script src="js/lib/jquery-2.1.4.min.js"></script>
   <script src="js/lib/jquery.mobile-1.4.5.min.js"></script>
+  <script src="js/lib/fastclick.js"></script>
   <script src='js/lib/jquery.transit.min.js'></script>
   <script src="js/lib/jquery.cookie.js" type="text/javascript"></script>
   <script src="js/lib/audio5.js"></script>
@@ -41,8 +42,8 @@
         <div id="board" data-role="none"></div>
       </div>
       <div id="controls_container" class="ui-block-b">
-        <a href="#settings_panel" class="ui-btn ui-btn-inline ui-icon-bars ui-btn-icon-notext"></a>
-        <a href="#newgame_panel" class="ui-btn ui-btn-inline ui-icon-home ui-btn-icon-notext"></a>
+        <a id="setting_button" href="#settings_panel" class="ui-btn ui-btn-inline ui-icon-bars ui-btn-icon-notext"></a>
+        <a id="newgame_button" href="#newgame_panel" class="ui-btn ui-btn-inline ui-icon-home ui-btn-icon-notext"></a>
         <a class="ui-btn ui-btn-inline ui-icon-arrow-l ui-btn-icon-notext" onclick="TakeBack();"></a>
         <a class="ui-btn ui-btn-inline ui-icon-arrow-r ui-btn-icon-notext" onclick="MoveForward();"></a>
         <a class="ui-btn ui-btn-inline ui-icon-recycle ui-btn-icon-notext" onclick="FlipBoard();"></a>
@@ -175,6 +176,11 @@ $(document).on("pagecreate", function () {
     SetThinkTime();
   });
 });
+
+$(function() {
+    FastClick.attach(document.setting_button);
+});
+
 
 
 </script>
