--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ $(document).on("pagecreate", function () {
 });
 
 $(function() {
-    FastClick.attach(document.setting_button);
+    FastClick.attach(document.body);
 });
 
 
