--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div align="center"><img src="img/logo48.png" border=0></div>
     <div align="center" id="panel_title" class="courier_new_small">
       <b>Persian Chess<b><br> 
-        Version 1.4.0
-        © 2009 - 2015 PersianChess.com
+        Version 1.4.1 (build 214)<br>
+        © 2009-2015 PersianChess.com
     </div>
     <hr>
     
