--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
   <!-- Game save/load pupup -->
   <div data-role="popup" id="gamesaveload_popup" class="ui-content" data-position-to="#console_container"></div>
 
+  <!-- Start Engine pupup -->
+  <div data-role="popup" id="startengine_popup" class="ui-content" data-position-to="#console_container"></div>
+
 <script src="js/PersianChessBoard.js"></script>
 <script src="js/PersianChessPlatform.js"></script>
 <script src="js/PersianChess.js"></script>
