changing training position names

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div align="center"><img src="img/logo48.png" border=0></div>
     <div align="center" id="panel_title" class="courier_new_small">
       <b>Persian Chess<b><br> 
-        Version 1.4.5 (build 326)<br>
+        Version 1.4.6 (build 326)<br>
         © 2009-2015 PersianChess.com
     </div>
     <hr>
@@ -179,13 +179,13 @@
       <div class="ui-block-a" style="width:65%; margin-right: 3px;">
           <select data-native-menu="false" data-mini="true" id="TPChoice">
             <option value="0">Standard</option>
-            <option value="1">Baby Luma</option>
-            <option value="2">Toad</option>
-            <option value="3">Yoshi</option>
-            <option value="4">Birdo</option>
-            <option value="5">Princess Peach</option>
-            <option value="6">Luigi</option>
-            <option value="7">Mario</option>
+            <option value="1">Ashavan</option>
+            <option value="2">Byarshan</option>
+            <option value="3">Chamru</option>
+            <option value="4">Darshinika</option>
+            <option value="5">Erezavant</option>
+            <option value="6">Frayazenta</option>
+            <option value="7">Garshta</option>
           </select>
       </div>
       <div class="ui-block-b" style="width:30%; margin-right: 3px;">
