--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   alt="Oriental Omega – Omega Chess 9×9" width="500" height="280" /></p>
 
               <p>Enjoy playing Persian Chess, and may the new strategies and tactics help you gain a deeper
-                understanding of the game. Have a good game!</p>
+                understanding of the game.</p>
             </div>
           </article>
         </main>
