--- a/index.html
+++ b/index.html
@@ -54,24 +54,19 @@
                 gameplay while staying connected to its historical roots. This variant changes the standard setup,
                 offering players a different yet familiar experience that enriches the strategic possibilities of chess.
               </p>
-              <p>
-                This variant of chess has been in development since 2006, involving years of research, design, and
-                programming. The current engine is built in JavaScript, making it easily playable in web browsers and on
-                mobile apps using Apache Cordova. The game and its Android app are Free and Open Source, inviting
-                players and developers to enjoy and contribute.</p>
-
+              <p>This variant of chess has been in development since 2006, involving research, design, and programming.
+                The current engine is built in JavaScript, making it easily playable in web browsers and on mobile apps.
+                The game is free and Open Source, inviting players and developers to enjoy and contribute.</p>
               <p>Persian Chess was first playable in June 2006 on a 9×9 "citadel" board, though the early version was
                 basic and buggy. After extensive rule refinement and several updates, the game saw its first stable
-                release in 2013 under the name "Chess911." Feedback led to a rebranding, and by 2014 it was renamed to
-                Persian Chess, better reflecting the theme and origins of the game.</p>
+                release in 2013.</p>
 
               <p><img class="size-medium aligncenter" src="site/img/persian-princess-logo.jpg"
                   alt="Persian Chess variant: Persian Princess" width="500" height="280" /></p>
 
               <p>The game features several sub-variants, each with its own unique theme:</p>
-
               <p><b>Celtic Citadel</b><br />
-                <b>Princess</b><br />
+                <b>Persian Princess</b><br />
                 <b>Egyptian Eye</b><br />
                 <b>Oriental Omega</b>
               </p>
@@ -79,33 +74,33 @@
               <p><img class="size-medium aligncenter" src="site/img/celtic-citadel-logo.jpg"
                   alt="Persian Chess variant: Celtic Citadel" width="500" height="280" /></p>
 
-              <p>Persian Chess is distinct from the "Mad Queen" (MQ) family of chess, such as the standard 8×8 FIDE
+              <p>This chess variant is distinct from the "Mad Queen" (MQ) family of chess, such as the standard 8×8 FIDE
                 chess, where the queen is the dominant piece. Instead, Persian Chess introduces additional compound
-                pieces, the **Princess** and the **Fortress**, which provide new tactical possibilities and enrich the
-                gameplay. These pieces are integral to the game, not treated as "fairy pieces," but as natural
+                pieces, the <i>Princess</i> and the <i>Fortress</i>, which provide new tactical possibilities and enrich
+                the gameplay. These pieces are integral to the game, not treated as "fairy pieces", but as natural
                 extensions of traditional chess mechanics.</p>
-
-              <p>The game uses a 9×9 "perfect" board, designed to offer symmetrical start positions with the king in the
-                central file. This layout eliminates the standard king-side and queen-side labels, instead using **Queen
-                side** (left of the king) and **Princess side** (right of the king). The expanded board size leads to
-                longer and more complex games, requiring careful planning and calculation in all phases of the game.</p>
+              <p>The game uses a 9×9 perfect board, designed to offer symmetrical start positions with the king in the
+                central file. This layout eliminates the standard king-side and queen-side labels, instead using
+                <i>Queen side</i> (left of the king) and <i>Princess side</i> (right of the king). The expanded board
+                size leads to longer and more complex games, requiring careful planning and calculation in all phases of
+                the game.</p>
 
               <p><img class="size-medium aligncenter" src="site/img/egyptian-eye-logo.jpg"
                   alt="Persian Chess variant: Egyptian Eye" width="500" height="280" /></p>
 
-              <p><h3>Why Play Persian Chess?</h3><br />
-                The goal of Persian Chess is to provide a fresh approach to chess while challenging players to go beyond
-                rote memorization of standard openings. The unique pieces and expanded board offer new strategic
-                options, making each game a test of creativity and skill. For players interested in deep positional play
-                and complex calculations, Persian Chess offers an engaging experience that can help develop skills
-                useful in standard 8×8 chess.</p>
-
-              <p>Whether you are a chess enthusiast or someone looking for a new challenge, Persian Chess offers a
-                different perspective on the game, with longer opening lines, dynamic middle game play, and intricate
-                endgames.</p>
+              <p>
+              <h3>Why Play Persian Chess?</h3><br />
+              The goal is to provide a fresh approach to chess while challenging players to go beyond rote memorization
+              of standard openings. The unique pieces and expanded board offer new strategic options, making each game a
+              test of creativity and skill. For players interested in deep positional play and complex calculations,
+              Persian Chess offers an engaging experience that can help develop skills useful in standard 8×8 chess.</p>
 
               <p><img class="alignnone size-medium aligncenter" src="site/img/oriental-omega-logo.jpg"
                   alt="Oriental Omega – Omega Chess 9×9" width="500" height="280" /></p>
+
+              <p>Whether you are a chess enthusiast or someone looking for a new challenge, this variant offers a
+                different perspective on the game, with longer opening lines, dynamic middle game play, and intricate
+                endgames.</p>
 
               <p>Enjoy playing Persian Chess, and may the new strategies and tactics help you gain a deeper
                 understanding of the game.</p>
